@@ -1,73 +1,24 @@
 package modules.admin.Subscription;
 
-import java.math.BigInteger;
 import java.util.Date;
-import java.util.UUID;
+
+import org.skyve.domain.Bean;
+import org.skyve.domain.PersistentBean;
+import org.skyve.domain.messages.DomainException;
+import org.skyve.domain.types.OptimisticLock;
+import org.skyve.impl.util.UUIDv7;
+import org.skyve.metadata.model.document.Bizlet;
+import org.skyve.persistence.Persistence;
+import org.skyve.persistence.SQL;
 
 import modules.admin.domain.Contact;
 import modules.admin.domain.Contact.ContactType;
 import modules.admin.domain.Subscription;
 
-import org.skyve.CORE;
-import org.skyve.domain.Bean;
-import org.skyve.domain.PersistentBean;
-import org.skyve.domain.messages.DomainException;
-import org.skyve.domain.messages.Message;
-import org.skyve.domain.messages.ValidationException;
-import org.skyve.domain.types.OptimisticLock;
-import org.skyve.metadata.customer.Customer;
-import org.skyve.metadata.model.document.Bizlet;
-import org.skyve.metadata.model.document.Document;
-import org.skyve.metadata.module.Module;
-import org.skyve.metadata.user.User;
-import org.skyve.persistence.Persistence;
-import org.skyve.persistence.SQL;
-
 public class SubscriptionBizlet extends Bizlet<Subscription> {
 
-	private static final long serialVersionUID = -8006732196635189574L;
-
 	private static final String SUBSCRIPTION_PUBLIC_USERNAME = "SkyveSubscriptionUser";
-
 	private static final String SUBSCRIPTION_PUBLIC_USER_ID = "SkyveSubscriptionUser";
-
-	/**
-	 * Validation for Subscription
-	 * 
-	 * If the subscription is declined, the format type is not required. If the
-	 * format type is supplied, then the communication is only declined for that
-	 * format.
-	 * 
-	 * If the subscription is not declined, the format type is required, as this
-	 * specifies the format preference for the communication.
-	 * 
-	 * If the subscription is not declined and has no formatType, the
-	 * subscription can be deleted as it holds no value.
-	 * 
-	 */
-	@Override
-	public void validate(Subscription bean, ValidationException e) throws Exception {
-
-		// get correct nomenclature for the user
-		Persistence pers = CORE.getPersistence();
-		User user = pers.getUser();
-		Customer customer = user.getCustomer();
-		Module module = customer.getModule(Subscription.MODULE_NAME);
-		Document document = module.getDocument(customer, Subscription.DOCUMENT_NAME);
-
-		if (!Boolean.TRUE.equals(bean.getDeclined())) {
-			if (bean.getFormatType() == null) {
-				StringBuilder msg = new StringBuilder(128);
-				msg.append("A ").append(document.getSingularAlias());
-				msg.append(" requires a ").append(document.getAttribute(Subscription.formatTypePropertyName).getDisplayName());
-				msg.append(" unless the ").append(document.getSingularAlias());
-				msg.append(" has ").append(document.getAttribute(Subscription.declinedPropertyName).getDisplayName()).append(" set.");
-				e.getMessages().add(new Message(Subscription.formatTypePropertyName, msg.toString()));
-			}
-		}
-
-		super.validate(bean, e);
-	}
 
 	/**
 	 * anonymouslyUnsubscribe creates a declined subscription for an anonymous request
@@ -94,8 +45,8 @@ public class SubscriptionBizlet extends Bizlet<Subscription> {
 
 			SQL sqlInsert = persistence.newSQL(sqlInsertString.toString());
 
-			String bizId = UUID.randomUUID().toString();
-			Integer bizVersion = new Integer("0");
+			String bizId = UUIDv7.create().toString();
+			Integer bizVersion = Integer.valueOf(0);
 			OptimisticLock lock = new OptimisticLock(SUBSCRIPTION_PUBLIC_USERNAME, new Date());
 			String bizLock = lock.toString();
 			String bizKey = "Subscription for " + receiverIdentifier;
@@ -159,7 +110,7 @@ public class SubscriptionBizlet extends Bizlet<Subscription> {
 				SQL sqlInsContact = persistence.newSQL(sqlInsContactString.toString());
 
 				String bizId = SUBSCRIPTION_PUBLIC_USER_ID;
-				Integer bizVersion = new Integer("0");
+				Integer bizVersion = Integer.valueOf(0);
 				OptimisticLock lock = new OptimisticLock(SUBSCRIPTION_PUBLIC_USERNAME, new Date());
 				String bizLock = lock.toString();
 				String bizKey = SUBSCRIPTION_PUBLIC_USERNAME;
@@ -186,7 +137,7 @@ public class SubscriptionBizlet extends Bizlet<Subscription> {
 				SQL sqlInsUser = persistence.newSQL(sqlInsUserString.toString());
 
 				bizId = SUBSCRIPTION_PUBLIC_USER_ID;
-				bizVersion = new Integer("0");
+				bizVersion = Integer.valueOf(0);
 				lock = new OptimisticLock(SUBSCRIPTION_PUBLIC_USERNAME, new Date());
 				bizLock = lock.toString();
 				bizKey = SUBSCRIPTION_PUBLIC_USERNAME;
@@ -207,7 +158,7 @@ public class SubscriptionBizlet extends Bizlet<Subscription> {
 			} else {
 				result = true;
 			}
-		} catch (DomainException d) {
+		} catch (@SuppressWarnings("unused") DomainException d) {
 			// do nothing, return null
 			// public user cannot be found or created
 		}
@@ -241,9 +192,9 @@ public class SubscriptionBizlet extends Bizlet<Subscription> {
 
 		// get results
 		try {
-			BigInteger exists = sqlSub.scalarResult(BigInteger.class);
-			result = exists.compareTo(new BigInteger("0"))>0;
-		} catch (DomainException d) {
+			Number exists = sqlSub.scalarResult(Number.class);
+			result = (exists != null) && (exists.longValue() > 0);
+		} catch (@SuppressWarnings("unused") DomainException d) {
 			// do nothing, return false
 		}
 		return result;
